--- a/assets/css/katalog.desc.css
+++ b/assets/css/katalog.desc.css
@@ -16,6 +16,7 @@
   min-width: 138px!important;
   min-height: 90px!important;
   background-size: 100%;
+  background-repeat: no-repeat;
 }
 .desc-description{
   padding: 5px;
