--- a/assets/css/adduser.css
+++ b/assets/css/adduser.css
@@ -17,7 +17,7 @@ label {
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: #212421;
   color: white;
   padding: 12px 20px;
   border: none;
