--- a/assets/css/addpassword.css
+++ b/assets/css/addpassword.css
@@ -17,7 +17,7 @@ body  {
   }
   
   input[type=submit] {
-    background-color: #4CAF50;
+    background-color: #282928;
     color: white;
     padding: 12px 20px;
     border: none;
