--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,12 @@
 body{
   overflow-x: hidden;
 }
+
+.filter-container{
+  height: calc(100vh - 56px);
+  position: fixed;
+  z-index: 9999;;
+}
+.katalog-container{
+  margin-left: 14rem;
+}
