--- a/assets/css/katalog.css
+++ b/assets/css/katalog.css
@@ -6,10 +6,17 @@
   display: block;
   margin: 10px!important;
   margin-right: 0!important;
+  transition: all ease-in-out 0.3s;
+  cursor: pointer;
+}
+.card:hover{
+  transform: scale(1.02)
 }
 .card .card-image{
   padding: 5px;
   width: 100%;
+  height: 230px;
+  overflow: hidden;
 }
 .card .card-image img{
   border-radius: 5px;
