--- a/assets/css/buttontambahsawah.css
+++ b/assets/css/buttontambahsawah.css
@@ -3,9 +3,14 @@
   right: 25px;
   bottom: 30px;
 }
+.button-tambah-sawah .btn{
+  vertical-align: middle;
+  padding: 10px;
+}
 .fa-plus-circle{
   font-size: 20px;
 }
 .button-tambah-sawah label{
   cursor: pointer;
+  margin: 0;
 }
