--- a/assets/css/lupapassword.css
+++ b/assets/css/lupapassword.css
@@ -4,10 +4,6 @@
     outline: 0;
     font-family: 'Open Sans', sans-serif;
 }
-body{
-
-
-}
 .container h1{
     text-align: left;
     color:#6a6a6b;
@@ -20,14 +16,12 @@ body{
     color:#6a6a6b ;
 }
 .container form input{
-    width: calc(100% - 20px);
+    width: 100%;
     padding: 8px 10px;
     margin-bottom: 15px;
-    border: none;
+    margin-right: 0;
     background-color: transparent;
-    border-bottom: 2px solid#6a6a6b;
     color: #fff;
-    font-size: 20px;
 }
 .container form button{
     width: 100%;
@@ -36,4 +30,8 @@ body{
     background-color:#6a6a6b;
     font-size: 18px;
     color: #fafafa;
+    border-radius: 20px;
+}
+.container form button:hover{
+    background-color:#59595a;
 }
