fix login & signup wallpaper position

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -29,5 +29,6 @@ body {
 .picture{
   background-image: url(../img/wall-log.png);
   background-repeat: no-repeat;
+  background-position: 0;
   background-size: cover;
 }
