Update the ubah_password view

--- a/assets/css/lupapassword.css
+++ b/assets/css/lupapassword.css
@@ -23,7 +23,7 @@
     background-color: transparent;
     color: #fff;
 }
-.container form button{
+/* .container form button{
     width: 100%;
     padding: 5px 0;
     border: none;
@@ -34,4 +34,4 @@
 }
 .container form button:hover{
     background-color:#59595a;
-}
+} */
