--- a/assets/css/filter.css
+++ b/assets/css/filter.css
@@ -1,20 +1,21 @@
 .filter{
+  font-size: 14px!important;
   z-index: 9999;
-  padding: 8px 28px 0 48px;
+  padding: 25px 28px 25px 28px;
 }
 .filter a{
   width: 100%;
   color: rgb(170, 170, 170);
   padding: 5px 0 5px 0;
 }
-.filter a:hover{
-  text-decoration: none;
-  color: black;
+.custom-range, select{
+  font-size: 14px!important;
+  height: 25px!important;
+  padding: 1px!important;
 }
 .custom-range{
   flex: none;
   width: 50%;
-  height: 33px;
 }
 .range-left{
   margin: 0 1.5px 0 0;
