--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,10 +3,12 @@ body{
 }
 
 .filter-container{
-  height: calc(100vh - 56px);
-  position: fixed;
-  z-index: 9999;;
+  margin-top: 25px;
+  z-index: 9999;
+  height: 405px;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
 }
 .katalog-container{
-  margin-left: 14rem;
+  margin-left: 7px;
 }
