--- a/assets/css/katalog.desc.css
+++ b/assets/css/katalog.desc.css
@@ -1,10 +1,10 @@
 .desc-wrapper{
-  width: 1073px;
+  width: 878px;
   margin-left: 7px;
 }
 .desc-image{
   width: 100%;
-  min-height: 295px;
+  min-height: 259px;
   padding: 5px;
 }
 .desc-image img{
@@ -14,8 +14,9 @@
   position: relative;
 }
 .indicator-list{
-  min-width: 138px!important;
-  min-height: 90px!important;
+  min-width: 111px!important;
+  min-height: 76px!important;
+  background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
 }
