Add editsawah & Add little update
merename addpassword.css menjadi userchangepassword dan sedikit mengubah tampilan

--- a/assets/css/userchangepassword.css
+++ b/assets/css/userchangepassword.css
@@ -1,24 +1,17 @@
-body  {
+body {
   box-sizing: border-box;
   background-color: #f8f8f8;
 }
-.photo-profile{
-  position: relative;
+.changepassword-wrapper{
+  background-color: white;
+  width: 65%;
+  margin: 25px 0 25px 0px;
+  height: 193px;
+  border-radius: 5px;
 }
-.photo-profile img{
-  min-width: 195px;
-  min-height: 195px;
-  max-width: 230px;
-  max-height: 230px;
-}
-.photo-profile input[type=file]{
-  position: absolute;
-  bottom: 0;
-}
-.nama-depan{
-  margin-right: 5px;
-}
-input[type=text], select, textarea {
+input[type="text"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -31,8 +24,8 @@ label {
   display: inline-block;
 }
 
-input[type=submit] {
-  background-color: #212421;
+input[type="submit"] {
+  background-color: #282928;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -41,13 +34,12 @@ input[type=submit] {
   float: right;
 }
 
-input[type=submit]:hover {
+input[type="submit"]:hover {
   background-color: #0f0f0f;
 }
 
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
   padding: 20px;
 }
 
@@ -71,16 +63,10 @@ input[type=submit]:hover {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
+  .col-25,
+  .col-75,
+  input[type="submit"] {
     width: 100%;
     margin-top: 0;
   }
-}
-
-
-.width{
-  width: 65%;
-  margin: 25px 0 25px 0px;
-  background-color: white;
-  border-radius: 5px;
 }
