--- a/assets/css/editsawah.css
+++ b/assets/css/editsawah.css
@@ -1,3 +1,22 @@
-.editsawah{
-  
+.edit-image{
+  max-height: 150px;
+  overflow: hidden;
+}
+.upload-button{
+  background-color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 5px 0 5px;
+  height: 20%;
+  border-bottom-left-radius: 5px;
+}
+.right-15{
+  right: 15px;
+}
+.upload-button label{
+  cursor: pointer;
+}
+.edit-image .image-view img{
+  width: 100%;
 }
